[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "package-name"
version = "0.1.0"
description = "..."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = []

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["win-64", "linux-64", "osx-arm64"]

[tool.pixi.dependencies]
python = ">=3.13"

[tool.pixi.pypi-dependencies]
package-name = { path = ".", editable = true }
